[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/play.gd" type="Script" id=1]
[ext_resource path="res://scripts/guitest.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/collectableoutline.png" type="Texture" id=4]
[ext_resource path="res://assets/images/collectable.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buttons/pause_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/images/button_a.png" type="Texture" id=7]
[ext_resource path="res://assets/images/button_a_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/images/button_b.png" type="Texture" id=9]
[ext_resource path="res://assets/images/button_b_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/images/buttons/home_normal.png" type="Texture" id=11]
[ext_resource path="res://assets/images/buttons/restart_normal.png" type="Texture" id=12]
[ext_resource path="res://assets/images/buttons/resume_normal.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="Play" type="Node"]
script = ExtResource( 1 )

[node name="INFOS" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="INFOS"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ElapsedTime" type="Label" parent="INFOS/Container"]
margin_left = 60.0
margin_top = 30.0
margin_right = 230.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "TIME"
valign = 1

[node name="FPS" type="Label" parent="INFOS/Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1054.85
margin_top = 30.0
margin_right = -884.851
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "FPS"
align = 2
valign = 1

[node name="Collectable" type="HBoxContainer" parent="INFOS/Container"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 120.0
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="TextureA" type="TextureRect" parent="INFOS/Container/Collectable"]
margin_left = 26.0
margin_right = 106.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="TextureA2" type="TextureRect" parent="INFOS/Container/Collectable"]
visible = false
margin_left = 168.0
margin_right = 248.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="TextureB" type="TextureRect" parent="INFOS/Container/Collectable"]
margin_left = 110.0
margin_right = 190.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="TextureB2" type="TextureRect" parent="INFOS/Container/Collectable"]
visible = false
margin_left = 210.0
margin_right = 290.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="TextureC" type="TextureRect" parent="INFOS/Container/Collectable"]
margin_left = 194.0
margin_right = 274.0
margin_bottom = 80.0
texture = ExtResource( 4 )

[node name="TextureC2" type="TextureRect" parent="INFOS/Container/Collectable"]
visible = false
margin_left = 336.0
margin_right = 416.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="GUI" type="CanvasLayer" parent="."]
layer = 10

[node name="Main" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonPause" type="TextureButton" parent="GUI/Main"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 100.0
texture_normal = ExtResource( 6 )

[node name="ButtonA" type="TouchScreenButton" parent="GUI/Main"]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 30, 787 )
normal = ExtResource( 7 )
pressed = ExtResource( 8 )
action = "tap_left"
visibility_mode = 1

[node name="ButtonB" type="TouchScreenButton" parent="GUI/Main"]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 1620, 797 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
action = "tap_right"
visibility_mode = 1

[node name="Pause" type="Control" parent="GUI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back" type="ColorRect" parent="GUI/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Pause"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -75.0
margin_bottom = 75.0
custom_constants/separation = 50
alignment = 1

[node name="ButtonHome" type="TextureButton" parent="GUI/Pause/HBoxContainer"]
margin_left = 685.0
margin_right = 835.0
margin_bottom = 150.0
texture_normal = ExtResource( 11 )

[node name="ButtonRestart" type="TextureButton" parent="GUI/Pause/HBoxContainer"]
margin_left = 885.0
margin_right = 1035.0
margin_bottom = 150.0
texture_normal = ExtResource( 12 )

[node name="ButtonResume" type="TextureButton" parent="GUI/Pause/HBoxContainer"]
margin_left = 1085.0
margin_right = 1235.0
margin_bottom = 150.0
texture_normal = ExtResource( 13 )

[node name="Over" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back" type="ColorRect" parent="GUI/Over"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Over"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -75.0
margin_bottom = 75.0
custom_constants/separation = 50
alignment = 1

[node name="ButtonHome" type="TextureButton" parent="GUI/Over/HBoxContainer"]
margin_left = 785.0
margin_right = 935.0
margin_bottom = 150.0
texture_normal = ExtResource( 11 )

[node name="ButtonRestart" type="TextureButton" parent="GUI/Over/HBoxContainer"]
margin_left = 985.0
margin_right = 1135.0
margin_bottom = 150.0
texture_normal = ExtResource( 12 )

[node name="Finished" type="Control" parent="GUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="GUI/Main/ButtonPause" to="." method="_on_ButtonPause_pressed"]
[connection signal="pressed" from="GUI/Pause/HBoxContainer/ButtonHome" to="." method="_on_ButtonHome_pressed"]
[connection signal="pressed" from="GUI/Pause/HBoxContainer/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="GUI/Pause/HBoxContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="GUI/Over/HBoxContainer/ButtonHome" to="." method="_on_ButtonHome_pressed"]
[connection signal="pressed" from="GUI/Over/HBoxContainer/ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
